--- a/en/index.html
+++ b/en/index.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../en/plural.html">Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">Organizers</a></li>-->
+        <li><a href="../en/organiza_en.html">Organizers</a></li>
         <li><a href="../en/community.html">Community</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
         <li><a href="../en/index.html">Plurinational Bayes</a></li>
         <li><a href="">WE ARE:</a></li>
         <li><a href="../en/plural.html">&#x2022; Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/organice.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
         <li><a href="">Events:</a></li>
@@ -123,14 +123,24 @@
             <div class="container">
             <br><br>
             <div class="center"><img class="responsive-img" src="../logos/PB.svg" alt="logo_unsl" style="width: 90%;"></a>
-            <h6 class="header col s12 light"><b>Intersubjective agreements in contexts of uncertainty</b></h6>
-            <h6 class="header col s12 light">Promoting Bayesian communities in Plurinational America and the Global South.</h6>
+            <h6 class="header col s12 light"><b>Promoting Bayesian Intelligence in Plurinational America and the Global South.</b></h6>
             </div>
 
             <br>
 
                 <div class="row center">
-                <h4 class="header col s12 light">Towards the Plurinational Bayesian School 2024!</h4>
+                <h4 class="header col s12 light">Plurinational Bayes School-Congress 2024!</h4>
+                <h6 class="header col s12 light"><b>Learn to teach to learn</b></h6>
+
+                <br>
+
+                <h6 class="header col s12 light">
+                Preserve the previous belief that remains compatible with the data.
+                <br>
+                Intersubjective agreements in contexts of uncertainty.
+                <br>
+                Memory, Truth and Justice.
+                </h6>
                </div>
 
                <!--<div class="row center">
