--- a/es/conducta.html
+++ b/es/conducta.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/plural.html">Plural</a></li>
-        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/organiza.html">Organización</a></li>
         <li><a href="../es/comunidad.html">Comunidad</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
             <li><a href="../es/index.html">Bayes Plurinacional</a></li>
             <li><a href="">SOMOS:</a></li>
             <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
             <li><a href="">Eventos:</a></li>
@@ -171,7 +171,7 @@
               <p>La experiencia acumulada por las comunidades más diversas del mundo ha llevado, de manera independiente, a una obligación universal de dar y recibir, y al desarrollo de tecnologías de reciprocidad que reactivan los vínculos comunitarios a través de ritos de intercambio (festivos o coercitivos).</p>
               <p>El Congreso es en sí mismo un rito festivo que tiene por objetivo crear y actualizar nuestros vínculos. Por eso lo hacemos. Queremos conocernos y construir relaciones de reciprocidad. Pero sabemos que en toda sociedad surgen conflictos y es importante cuidar a las personas que puedan sentirse afectadas. Por eso, en caso de conflicto, comunicate con alguien en quien confíes y a algún miembro de la organización.</p>
               <p>Para preservar la salud de los vínculos, los sistemas coercitivos comunitarios primero activan los tres tipos de relaciones posibles: (->) los gestos, actos u obsequios que la parte acusada ofrece a la parte afectada; (<-) la ayuda que se le ofrece a la parte acusada para modificar el comportamiento que dio origen al conflicto; (<->) y el intercambio que renueva el entendimiento. Solo en última instancia, en caso de que la persona persista en una actitud que afecta la salud de los vínculos comunitarios, la persona acusada podrá ser expulsada.</p>
-              <p>Como dice el último principio del Buen Vivir (en Aymara): <em>Suma Churaña, Suma Katukañaz</em>. Hay que saber dar y recibir con dicha y agradecimiento porque la vida es la unión de muchos seres y fuerzas. Nos vemos en la próxima fiesta para alimentar nuestros vínculos.</p>
+              <p>Como dice el último principio del Buen Vivir (en Aymara): <em>Suma Churaña, Suma Katukaña</em>. Hay que saber dar y recibir con dicha y agradecimiento porque la vida es la unión de muchos seres y fuerzas. Nos vemos en la próxima fiesta para alimentar nuestros vínculos.</p>
               <h5>Principios del Buen Vivir (versión Aymara)</h5>
               <hr></hr>
               <p>
