--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -19,6 +19,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <!--One way to display figures side by side-->
     <style>
+    .vertical {
+            border-right: 1px solid gray;
+        }
     .figcontainer {
     display: flex;
     justify-content: center;
@@ -43,7 +46,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/plural.html">Plural</a></li>
-        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/organiza.html">Organización</a></li>
         <li><a href="../es/comunidad.html">Comunidad</a></li>
     </ul>
 
@@ -90,7 +93,7 @@
             <li><a href="../es/index.html">Bayes Plurinacional</a></li>
             <li><a href="">SOMOS:</a></li>
             <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
             <li><a href="">Eventos:</a></li>
@@ -137,54 +140,110 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Escuela Bayesiana Plurinacional 2024
+                Hacia la Escuela-Congreso Bayes Plurinacional 2024
                 <h4>
 
                 <h6 class="header col s12 light">
-                La comunidad Bayes Plurinacional realizó con éxito el Congreso Bayesiano Plurinacional 2023 los días 4, 5 y 6 de agosto en las instalaciones de la Secretaría de Ciencia y Tecnología de la provincia de Santiago del Estero, Argentina. La diversidad disciplinar y de regiones fue extraordinaria. Durante el congreso quedó de manifiesto una imperiosa necesidad de contar con mayor cantidad de instancias de formación teórica y práctica en métodos bayesianos. Por ello, en la actividad de cierre se decidió organizar la Escuela Bayesiana Plurinacional 2024.
+                La comunidad Bayes Plurinacional realizó con éxito el Congreso Bayesiano Plurinacional 2023 los días 4, 5 y 6 de agosto en las instalaciones de la Secretaría de Ciencia y Tecnología de la provincia de Santiago del Estero, Argentina.
+                La diversidad disciplinar y de regiones fue extraordinaria.
+                Durante el congreso quedó de manifiesto una imperiosa necesidad de contar con mayor cantidad de instancias de formación teórica y práctica en métodos bayesianos dando origen a la creación de la Escuela-Congreso Bayes Plurinacional 2024.
                 </h6>
                     
                 <h6 class="header col s12 light">
-                La Escuela Bayesiana Plurinacional se realizará al menos durante 3 días, en la semana del 5 de agosto del 2024 en la Universidad Nacional de Salta, Argentina. Contará con talleres prácticos de niveles inicial e intermedio durante la mañana, talleres prácticos de nivel avanzado durante la tarde, y exposiciones y mesas de debate durante la noche. La búsqueda activa de disertantes se realizará durante el primer cuatrimestre del año 2024. La escuela finalizará con un Hackatón que tiene una duración cuatrimestral hasta la publicación de los resultados.
+                La Escuela Bayes Plurinacional tiene entre sus objetivos fortalecer la oferta de formación en investigación y/o aplicación de la inferencia bayesiana, mediante el desarrollo de talleres dictados por especialistas de nuestra región, como así también impulsar lazos, capacidades e interacción para el aprendizaje y la implementación de estos conceptos.
+                Por ello, el próximo 6 de agosto de 2024 se dará inicio a la Escuela-Congreso Bayes Plurinacional en Salta, Argentina.
+                Durante 3 días nos reuniremos en la Universidad Nacional de Salta para realizar talleres prácticos, exposiciones, mesas de debate y sesiones de pósters, finalizando con un Hackatón.
+                Registrate la Escuela-Congreso Bayes Plurinacional <a href="https://forms.gle/y1tgmc16LXaFHwJo8">aquí</a>.
                 </h6>
 
+                <br>
+
+            <table align="center">
+              <tr>
+                <td style="text-align: center;" class="vertical">Hora</td>
+                <th style="text-align: center;" class="vertical">Martes 6</th>
+                <th style="text-align: center;" class="vertical">Miércoles 7</th>
+                <th style="text-align: center;" class="vertical">Jueves 8</th>
+                <td style="text-align: center;" class="vertical">Viernes 9</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;" class="vertical">8:00 - 9:00</td>
+                <td style="text-align: center; background-color: #E3E3E3" class="vertical">Bienvenida</td>
+                <td style="text-align: center;" class="vertical"></td>
+            <td style="text-align: center;" class="vertical"></td>
+            <td style="text-align: center;" class="vertical"></td>
+              </tr>
+              <tr>
+                <th style="text-align: center;" class="vertical">9:00 - 12:00</th>
+                <td colspan="3" style="text-align: center;  background-color: #C3C3C3" class="vertical"><b>Talleres prácticos nivel inicial</b>: "Verdades empíricas"</td>
+                <td style="text-align: center;" class="vertical"></td>
+              </tr>
+              <tr>
+                <td style="text-align: center;" class="vertical">12:00 - 13:00</td>
+                <td colspan="3" style="text-align: center;  background-color: #E3E3E3" class="vertical">Almuerzo</td>
+                <td rowspan="6" style="text-align: center;  background-color: #F3F3F3" class="vertical">Aire libre</td>
+              </tr>
+              <tr>
+                <th style="text-align: center;" class="vertical">13:00 - 16:00</th>
+                <td colspan="3" style="text-align: center;  background-color: #C3C3C3" class="vertical"><b>Talleres prácticos nivel intermedio</b>: "Creencias óptimas"</td>
+              </tr>
+              <tr>
+                <td style="text-align: center;" class="vertical">16:00 - 17:00</td>
+                <td colspan="3" style="text-align: center;  background-color: #E3E3E3" class="vertical">Poster</td>
+              </tr>
+                <tr>
+                <th style="text-align: center;" class="vertical">17:00 - 19:00</th>
+                <td colspan="3" style="text-align: center;  background-color: #C3C3C3" class="vertical"><b>Exposición y debates</b>: "Acuerdos intersubjetivos"</td>
+              </tr>
+            </table>
+
+                <br>
+
+
                 <h6 class="header col s12 light">
+                El cronograma está sujeto a posibles modificaciones, que serán comunicadas a través de esta página web y nuestras redes sociales.
+
+                <br><br>
+
+                <b>¿Te interesa dar un Taller o Charla?</b> Completá el siguiente <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario</a>.
+                Se aceptarán propuestas hasta el 14 de abril 2024. Por consultas, dirigirse al e-mail bayesplurinacional@gmail.com
+
                 <ul>
-                    <li> <b>Talleres de nivel inicial-intermedio "Verdades empíricas" (9 a 12 hs):</b>
+                    <li> <b>Talleres de nivel inicial "Verdades empíricas" (9 a 12 hs):</b>
 
-
-                    Tendrán una duración de 3 días y darán una visión amplia, completa y profunda sobre: redes bayesianas; inferencia causal y evaluación de modelos causales; teoría de la información y operacionalización de datos; series temporales y aproximaciones; toma de decisiones y apuestas.
+                    Visión amplia, completa y profunda sobre: redes bayesianas; inferencia causal y evaluación de modelos causales; teoría de la información y operacionalización de datos; series temporales y aproximaciones; toma de decisiones y apuestas.
                     </li>
 
                     <br>
 
-                    <li> <b>Talleres de nivel avanzado "Creencias óptimas"(13:30 a 16:30 hs):</b>
+                    <li> <b>Talleres de nivel intermedio "Creencias óptimas"(13 a 16 hs):</b>
 
-                    Un mínimo de tres talleres de 2 a 3 horas de duración sobre aplicaciones concretas utilizadas en la actualidad en el sector público, privado o en la academia. Serán dictados por personas que emplean actualmente métodos bayesianos en sus trabajos, y se espera que enseñen a replicar parte del proceso de inferencia que habitualmente se usan para la resolución de problemas reales.
+                    Talleres de 2 a 3 horas de duración sobre aplicaciones concretas utilizadas en la actualidad en el sector público, privado o en la academia. Serán dictados por personas que emplean actualmente métodos bayesianos en sus trabajos, y se espera que enseñen a replicar parte del proceso de inferencia que habitualmente se usan para la resolución de problemas reales.
                     </li>
 
                     <br>
 
 
-                    <li> <b>Exposiciones y debates "Acuerdos intersubjetivos" (18 a 21 hs):</b>
+                    <li> <b>Exposiciones y debates "Acuerdos intersubjetivos" (17 a 19 hs):</b>
 
-                    Estará organizado en mesas, idealmente sin superposición. Durante la primera hora de cada día se realizan 3 exposiciones de aproximadamente 20 minutos cada una a cargo de referentes de diversas disciplinas que trabajen con métodos bayesianos. Esto será considerado como parte del Congreso Bayesiano Plurinacional 2024. Habrá también exposición de trabajos en formato póster. Se llevarán a cabo paneles de debate sobre temas de interés socio-ambiental.
+                    Estará organizado en mesas con exposiciones de 15 minutos aproximadamente, a cargo de referentes de diversas disciplinas que trabajan con métodos bayesianos. Habrá también exposición de trabajos en formato póster. Se llevarán a cabo paneles de debate sobre temas de interés socio-ambiental.
                     </li>
 
                     <br>
 
                     <li> <b>Hackatón "Apuestas de vida": </b>
 
-                    Será un problema de inferencia con apuestas e intercambio de recursos. El problema de inferencia es un Monty Hall extendido, que requiere conocimientos de series temporales y toma de decisiones vistos en el taller inicial-intermedio.
+                     Será un problema de inferencia con apuestas e intercambio de recursos que requiere conocimientos de series temporales y toma de decisiones que serán vistos en el taller inicial.
                     </li>
                 </ul>
                 </h6>
 
-                <h6 class="header col s12 light">
-                La Escuela Bayesiana Plurinacional tiene por objetivo fortalecer la oferta de formación en inferencia bayesiana mediante el desarrollo de talleres dictados por investigadores de nuestra región.
-                </h6>
 
                 <br>
+
+                <h6>
+                <b>Registrate como Asistente o Expositor</b> completando este <a href="https://forms.gle/y1tgmc16LXaFHwJo8">formulario</a>. Inscripciones abiertas hasta el 14 de abril.
+                </h6>
 
             <!--<div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
@@ -199,12 +258,13 @@
             <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
             <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
             </div>
-        </div>
-        <div class="figcontainer" style="align-items: center;">
+            </div>
+
+            <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
             <img class="responsive-img" src="../logos/BP.png" alt="BP">
             </div>
-        </div>
+            </div>
 
 
         </div>
