--- a/es/index.html
+++ b/es/index.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/plural.html">Plural</a></li>
-        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/organiza.html">Organización</a></li>
         <li><a href="../es/comunidad.html">Comunidad</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
             <li><a href="../es/index.html">Bayes Plurinacional</a></li>
             <li><a href="">SOMOS:</a></li>
             <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
             <li><a href="">Eventos:</a></li>
@@ -162,15 +162,27 @@
             <br><br>
 
             <div class="center"><img class="responsive-img" src="../logos/BP.svg" alt="logo_unsl" style="width: 90%;">
-            <h6 class="header col s12 light"><b>Acuerdos intersubjetivos en contextos de incertidumbre</b></h6>
-            <h6 class="header col s12 light">Impulsando las comunidades bayesianas en la América Plurinacional y los pueblos del sur global.</h6>
+            <h6 class="header col s12 light"><b>Promoviendo la Inteligencia Bayesiana en la América Plurinacional y los pueblos del sur global.</b></h6>
             </div>
 
             <br>
 
             <div class="row center">
-                <h4 class="header col s12 light">Hacia la Escuela Bayesiana Plurinacional 2024!</h4>
+                <h4 class="header col s12 light">Escuela-Congreso Bayes Plurinacional 2024!</h4>
+                <h6 class="header col s12 light"><b>Aprender a enseñar a aprender</b></h6>
+
+                <br>
+
+                <h6 class="header col s12 light">
+                Preservar la creencia previa que sigue siendo compatible con los datos.
+                <br>
+                Acuerdos intersubjetivos en contextos de incertidumbre.
+                <br>
+                Memoria, Verdad y Justicia.
+                </h6>
+
             </div>
+
 
 			<!--<div class="row center">
                 <h5 class="header col s12 light">¡Participe de la creciente comunidad bayesiana plurinacional!</h5>
