--- a/es/seminario.html
+++ b/es/seminario.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/plural.html">Plural</a></li>
-        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/organiza.html">Organización</a></li>
         <li><a href="../es/comunidad.html">Comunidad</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
             <li><a href="../es/index.html">Bayes Plurinacional</a></li>
             <li><a href="">SOMOS:</a></li>
             <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
             <li><a href="">Eventos:</a></li>
@@ -182,9 +182,7 @@
               <ul>
                 <li>&#x2022; <b>Gonzalo Ríos.</b> Chief Scientific Officer - NoiseGrasp Spa.</li>
                 <li>&#x2022; <b> Cuándo:</b> 4 de septiembre del 2023</li>
-                <li>&#x2022; <b> Dónde:</b>En vivo por youtube</li>
-                <!--<li>&#x2022; <b>Material:</b> Texto de divulgación <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Pdf de la presentación.</a></li>
-                -->
+                <!--<li>&#x2022; <b> Dónde:</b>En vivo por youtube</li>-->
                 <li>&#x2022; <b>Resumen:</b> Se presenta un paradigma de selección de modelo basado en el criterio de transporte óptimo: el baricentro bajo la distancia de Wasserstein. Se caracterizará el modelo seleccionado además de entregar algunas herramientas para su cálculo.
                 </li>
                 <li>&#x2022; <b>Bio:</b> Jefe del área de Data Science para el desarrollo de modelos predictivos de marketing en la empresa NoiseGrasp Spa. Formado en la Universidad de Chile como Doctor en Ciencias de la Ingeniería, Magister en Ciencias de la Computación, Licenciado en Ciencias Matemáticas, Ingeniero Civil Matemático. Durante una década fue profesor de la Universidad de Chile en los departamentos de matemática, computación e ingeniería.</li>
@@ -201,8 +199,8 @@
 
               <ul>
                 <li>&#x2022; <b>Francisco Xavier Linares Cedeno.</b> Investigador posdoctoral en el Instituto de Física y Matemáticas - Universidad Michoacana de San Nicolás de Hidalgo, México.</li>
-                <li>&#x2022; <b> Cuándo:</b> Jueves 1 de Junio a las 16h (hora argentina GMT-3)</li>
-                <li>&#x2022; <b> Dónde:</b> Por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b> Cuándo:</b> Jueves 1 de Junio 2023 a las 16h (hora argentina GMT-3)</li>
+                <!--<li>&#x2022; <b> Dónde:</b> Por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Material:</b> Texto de divulgación <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Cosmología e Inferencia Bayesiana.</a></li>
                 <li>&#x2022; <b>Resumen:</b> En esta charla se describe el proceso de inferencia de parámetros cosmológicos usando el Teorema de Bayes. En primer lugar se introducen las ecuaciones de Einstein para construir el modelo estándar cosmológico <em>LambdaCDM</em>. Para analizar los datos de observaciones de Supernovas, se define el cálculo de la distancia a objetos luminosos conocido como <em>módulo de distancia teórico</em>. En segundo lugar se presenta la información obtenida de las supernovas y el procedimiento para parametrizar el módulo de distancia observable por medio de propiedades intrínsecas de las mismas. En tercer lugar, por medio del Teorema de Bayes, se establece la comparación estadística entre la predicción del modelo LambdaCDM y el módulo de distancia de las supernovas. Específicamente, se impondrán restricciones al parámetro de materia total del universo, y se plantea la pregunta ¿cuál es el valor más probable de la cantidad de materia en el universo, dados los datos de supernovas?. Finalmente, se mencionará el uso de la estadística Bayesiana en otros contextos cosmológicos.
                 </li>
@@ -220,8 +218,8 @@
 
               <ul>
                 <li>&#x2022; <b>Kenia Almenares</b>. Escuela Nacional de Salud Pública de Cuba</li>
-                <li>&#x2022; <b> Cuándo:</b> Jueves 11 de Mayo a las 16h (hora argentina GMT-3)</li>
-                <li>&#x2022; <b> Dónde:</b> En vivo por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b> Cuándo:</b> Jueves 11 de Mayo 2023 a las 16h (hora argentina GMT-3)</li>
+                <!--<li>&#x2022; <b> Dónde:</b> En vivo por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Co-autores:</b> Pedro Más Bermejo DrCs., Lizet Sánchez Valdés DrC., María J. Vidal Ledo DrC.</li>
                 <li>&#x2022; <b>Material:</b> Artículo <a href="biblio/almenares2022-covidAbdala.pdf" target="_blank">Impacto y efectividad de la vacuna Abdala en la provincia Matanzas ante la enfermedad sintomática y la muerte por COVID-19</a></li>
                 <li>&#x2022; <b>Resumen:</b> La vacuna cubana Abdala fue diseñada por el Centro de Ingeniería Genética y Biotecnología de Cuba, para controlar la epidemia por COVID-19. Se implementó en campaña de vacunación en personas ≥ 19 años, en La Habana, durante mayo-julio de 2021. Objetivo: Evaluar el impacto de la vacunación en la incidencia, la gravedad y la mortalidad por COVID-19, en La Habana, Cuba, desde julio a octubre de 2021. Método: Se realizó un estudio longitudinal de impacto causal, en la Habana, Cuba. Se incluyó a la totalidad de la población habanera, 2 137 936 habitantes, y se aplicó el modelo Estructural Bayesiano de Series de Tiempo (por sus siglas en inglés BSTS), para obtener el impacto de la vacunación con la vacuna Abdala a corto plazo, con el cálculo de la diferencia (contrafactual), entre las series de tiempo observadas de incidencia, gravedad y mortalidad, y lo que habría sucedido si no se hubiera intervenido con la vacunación. Se utilizaron como series de control, las series de tiempo de incidencia, gravedad y mortalidad de las provincias Camagüey y Holguín en igual período de tiempo, se usaron intervalos probabilísticos de 95,0 %. Resultados: En ausencia de la intervención, se esperaba un valor promedio de la incidencia semanal, de 151 casos, en cambio, se observaron 22, con una reducción relativa de 54,0%, el 95,0% del intervalo contrafactual fue (-70;-38). La gravedad no mostró cambios significativos a corto plazo. Sin embargo, la mortalidad, mostró un valor esperado de alrededor de 3 fallecidos semanales como promedio, el valor observado fue 2, con una reducción a partir del momento de la intervención de un 36,0%, intervalo (-56;-14). Conclusiones: El impacto de la vacunación evidenció una reducción en los indicadores de incidencia, gravedad y muerte por COVID-19 en La Habana, Cuba.</li>
@@ -239,8 +237,8 @@
 
               <ul>
                 <li>&#x2022; <b>Rodrigo Echeveste</b>. Investigador del CONICET, Instituto sinc(i), Santa Fe, Argentina.</li>
-                <li>&#x2022; <b> Cuándo:</b> Jueves 4 de Mayo a las 16h (hora argentina GMT-3)</li>
-                <li>&#x2022; <b> Dónde:</b> En vivo por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b> Cuándo:</b> Jueves 4 de Mayo 2023 a las 16h (hora argentina GMT-3)</li>
+                <!--<li>&#x2022; <b> Dónde:</b> En vivo por <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Material:</b> Artículo <a href="https://www.nature.com/articles/s41593-020-0671-1.pdf
                 " target="_blank">Cortical-like dynamics in recurrent circuits optimized for sampling-based probabilistic inference</a></li>
                 <li>&#x2022; <b>Resumen:</b> En los últimos años ha comenzado a ganar fuerza el uso de Deep Learning para explicar el comportamiento de los sistemas neuronales naturales. Sin embargo, estos modelos carecen de dinámica y no suelen representar correctamente la incerteza de sus predicciones. Nuestra corteza cerebral, en cambio, presenta una rica dinámica y nos permite manejarnos en un mundo en el cual la información que recibimos de nuestros sentidos es siempre parcial e incompleta. En esta charla les estaré contando sobre cómo entrenar redes neuronales recurrentes bajo restricciones biológicas, para aproximar a un observador ideal bayesiano. Soprendentemente emergen, a partir de este objetivo puramente computacional, características dinámicas típicas de la corteza visual, como son las oscilaciones gamma y las respuestas transitorias con sobrepaso. Este tipo de modelos nos permiten avanzar en la comprensión de los vínculos entre fisiología y percepción sensorial.</li>
