--- a/en/about.html
+++ b/en/about.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../en/plural.html">Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">Organizers</a></li>-->
+        <li><a href="../en/organiza_en.html">Organizers</a></li>
         <li><a href="../en/community.html">Community</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
         <li><a href="../en/index.html">Plurinational Bayes</a></li>
         <li><a href="">WE ARE:</a></li>
         <li><a href="../en/plural.html">&#x2022; Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/organice.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
         <li><a href="">Events:</a></li>
@@ -128,77 +128,109 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Plurinational Bayesian School 2023
+                    Towards the Bayes Plurinational School-Congress 2024
                 <h4>
 
                 <h6 class="header col s12 light">
-                The Plurinational Bayes community successfully held the Plurinational Bayesian Congress 2023 on August 4, 5 and 6 at the facilities of the Secretariat of Science and Technology of the province of Santiago del Estero, Argentina.
-                The diversity of disciplines and regions was extraordinary.
-                During the congress it became clear that there is an urgent need for more instances of theoretical and practical training in Bayesian methods.
-                Therefore, in the closing activity it was decided to organize the Plurinational Bayesian School 2024.</h6>
-
-                <h6 class="header col s12 light">
-                The Plurinational Bayesian School will be held for at least 3 days during the week of August 5, 2024 at the National University of Salta, Argentina. It will have practical workshops for beginners and intermediate levels during the morning, practical workshops for advanced levels during the afternoon, and presentations and round table discussions during the evening. The active search for speakers will take place during the first quarter of the year 2024. The school will end with a Hackathon that will last four months until the results are published.
+                    The Plurinational Bayes community successfully held the Plurinational Bayesian Congress 2023 on August 4, 5, and 6 at the facilities of the Secretariat of Science and Technology of the province of Santiago del Estero, Argentina.
+                    The disciplinary and regional diversity was extraordinary.
+                    During the congress it became clear that there was an urgent need for more instances of theoretical and practical training in Bayesian methods, giving rise to the creation of the Plurinational Bayes School-Congress 2024.
                 </h6>
 
                 <h6 class="header col s12 light">
-                <ul>
-                    <li> <b>Workshops for beginner-intermediate level "Empirical truths" (9am to 12am):</b>
-
-
-                    They will last 3 days and will provide a broad, comprehensive and in-depth overview of: Bayesian networks; causal inference and causal model evaluation; information theory and data operationalization; time series and approximations; decision making and gambling.
-                    </li>
-
-                    <br>
-
-                    <li> <b>Advanced level workshops "Optimal beliefs" (1:30pm to 16:30pm):</b>
-
-                    A minimum of three 2-3 hour workshops on specific applications currently used in the public sector, private sector or academia. They will be given by people who are currently using Bayesian methods in their work, and are expected to teach how to replicate part of the inference process that is commonly used to solve real problems.
-                    </li>
-
-                    <br>
-
-
-                    <li> <b>Exhibitions and debates "Intersubjective Agreements" (6pm to 9pm):</b>
-
-                    It will be organized in tables, ideally without overlapping. During the first hour of each day there will be 3 presentations of approximately 20 minutes each, given by leaders from different disciplines who work with Bayesian methods. This will be considered as part of the Plurinational Bayesian Congress 2024. There will also be an exhibition of papers in poster format. There will be panel discussions on topics of socio-environmental interest.
-                    </li>
-
-                    <br>
-
-                    <li> <b>Hackathon "Bets of Life":</b>
-
-                    It will be an inference problem with betting and resource sharing. The inference problem is an extended Monty Hall, which requires knowledge of time series and decision making seen in the initial-intermediate workshop.
-                    </li>
-                </ul>
-                </h6>
-
-                <h6 class="header col s12 light">
-                The Plurinational Bayesian School aims to strengthen the training offer in Bayesian inference through the development of workshops given by researchers in our region.
+                    The Plurinational Bayes School aims to enhance the training opportunities in research and/or application of Bayesian inference by offering workshops conducted by specialists from our region.
+                    Additionally, it seeks to foster connections, skills, and interaction to facilitate learning and the practical implementation of these concepts. Therefore, on August 6, 2024, the Plurinational Bayes School-Congress will begin in Salta, Argentina.
+                    For 3 days, we will gather at the National University of Salta to conduct practical workshops, presentations, debate tables, and poster sessions, concluding with a Hackathon.
+                    Register for the Plurinational Bayes School-Congress <a href="https://forms.gle/y1tgmc16LXaFHwJo8">here</a>.
                 </h6>
 
                 <br>
 
-            <!--<div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
+                <table align="center">
+                    <tr>
+                        <td style="text-align: center;" class="vertical">Time</td>
+                        <th style="text-align: center;" class="vertical">Tuesday 6</th>
+                        <th style="text-align: center;" class="vertical">Wednesday 7</th>
+                        <th style="text-align: center;" class="vertical">Thursday 8</th>
+                        <td style="text-align: center;" class="vertical">Friday 9</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;" class="vertical">8:00 - 9:00</td>
+                        <td style="text-align: center; background-color: #E3E3E3" class="vertical">Welcome</td>
+                        <td style="text-align: center;" class="vertical"></td>
+                        <td style="text-align: center;" class="vertical"></td>
+                        <td style="text-align: center;" class="vertical"></td>
+                    </tr>
+                    <tr>
+                        <th style="text-align: center;" class="vertical">9:00 - 12:00</th>
+                        <td colspan="3" style="text-align: center; background-color: #C3C3C3" class="vertical"><b>Initial level practical workshops</b>: "Empirical truths"</td>
+                        <td style="text-align: center;" class="vertical"></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;" class="vertical">12:00 - 13:00</td>
+                        <td colspan="3" style="text-align: center; background-color: #E3E3E3" class="vertical">Lunch</td>
+                        <td rowspan="6" style="text-align: center; background-color: #F3F3F3" class="vertical">Outdoors</td>
+                    </tr>
+                    <tr>
+                        <th style="text-align: center;" class="vertical">13:00 - 16:00</th>
+                        <td colspan="3" style="text-align: center; background-color: #C3C3C3" class="vertical"><b>Intermediate level practical workshops</b>: "Optimal beliefs"</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;" class="vertical">16:00 - 17:00</td>
+                        <td colspan="3" style="text-align: center; background-color: #E3E3E3" class="vertical">Poster</td>
+                    </tr>
+                    <tr>
+                        <th style="text-align: center;" class="vertical">17:00 - 19:00</th>
+                        <td colspan="3" style="text-align: center; background-color: #C3C3C3" class="vertical"><b>Presentations and debates</b>: "Intersubjective agreements"</td>
+                    </tr>
+                </table>
+
+                <br>
+
+                <h6 class="header col s12 light">
+                The schedule is subject to possible modifications, which will be communicated through this website and our social media.
+
+                <br><br>
+
+                <b>Are you interested in giving a Workshop or Talk?</b> Please, complete the following <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>.
+                Proposals will be accepted until April 14, 2024. For further information, please send an e-mail to bayesplurinacional@gmail.com
+
+                    <ul>
+                        <li><b>Initial level workshops "Empirical truths" (9 am - 12 pm):</b> Broad, comprehensive, and in-depth view on: Bayesian networks; causal inference and model evaluation; information theory and data operationalization; time series and approximations; decision-making and betting.
+                        </li>
+                        <br>
+                        <li><b>Intermediate level workshops "Optimal beliefs" (1 pm - 4 pm):</b> Workshops of 2 to 3 hours duration on concrete applications currently used in the public sector, private sector, or academia. They will be taught by individuals who currently employ Bayesian methods in their work, and it is expected that they will teach to replicate part of the inference process commonly used for solving real problems.
+                        </li>
+                        <br>
+                        <li><b>Presentations and debates "Intersubjective agreements" (5 pm - 7 pm):</b>    It will be organized in tables with presentations of 15 minutes approximately, in charge of referents of diverse disciplines that work with Bayesian methods. There will also be poster presentations and panel discussions on topics of socio-environmental interest.
+                        </li>
+                        <br>
+                        <li><b>Hackathon "Life bets":</b> It will be an inference problem with bets and resource exchange that requires knowledge of time series and decision making, which will be covered in the initial workshop.
+                        </li>
+                    </ul>
+                </h6>
+
+                <br>
+
+                <h6>
+                    <b>Register as an Attendee or Presenter</b> by filling out this <a href="https://forms.gle/y1tgmc16LXaFHwJo8">form</a>. Registrations open until April 14.
+                </h6>
+
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.3; margin-right: 4%; margin-left: 4%; margin-bottom: 0%;">
+                        <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
+                    </div>
+
+                    <div class="figure" style="flex: 0.5; margin-right: 6%; margin-left: 0%">
+                        <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+                    </div>
                 </div>
-            </div>-->
-            <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
-            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
-            </div>
 
-            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
-            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
-            </div>
-        </div>
-        <div class="figcontainer" style="align-items: center;">
-            <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
-            <img class="responsive-img" src="../logos/BP.png" alt="BP">
-            </div>
-        </div>
-
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.8; margin-right: 4%; margin-left: 4%; margin-bottom: 0%;">
+                        <img class="responsive-img" src="../logos/PB.png" alt="BP">
+                    </div>
+                </div>
 
             </div>
         </div>
