--- a/en/faq.html
+++ b/en/faq.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../en/plural.html">Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">Organizers</a></li>-->
+        <li><a href="../en/organiza_en.html">Organizers</a></li>
         <li><a href="../en/community.html">Community</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
         <li><a href="../en/index.html">Plurinational Bayes</a></li>
         <li><a href="">WE ARE:</a></li>
         <li><a href="../en/plural.html">&#x2022; Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/organice.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
         <li><a href="">Events:</a></li>
