--- a/en/organice.html
+++ b/en/organice.html
@@ -50,7 +50,7 @@
     }
     </style>
 </head>
-    <body>
+<body>
     <ul id="dropdown0" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/index.html">Castellano</a></li>
@@ -63,73 +63,73 @@
     </ul>
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/plural.html">Plural</a></li>
-        <li><a href="../es/organiza.html">Organización</a></li>
-        <li><a href="../es/comunidad.html">Comunidad</a></li>
+        <li><a href="../en/plural.html">Plural</a></li>
+        <li><a href="../en/organiza_en.html">Organizers</a></li>
+        <li><a href="../en/community.html">Community</a></li>
     </ul>
 
     <ul id="dropdown3" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/descripcion.html">Descripción</a></li>
-        <li><a href="../es/ciudad.html">Ciudad</a></li>
-        <li><a href="../es/historia.html">Historia</a></li>
-        <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
-        <li><a href="../es/charlas.html">Charlas</a></li>
-        <li><a href="../es/poster.html">Posters</a></li>
-        <li><a href="../es/taller.html">Taller</a></li>
-        <li><a href="../es/becas.html">Becas</a></li>-->
+        <li><a href="../en/about.html">About</a></li>
+        <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/history.html">History</a></li>
+        <!--<li><a href="../en/schedule.html">Schedule</a></li>
+        <li><a href="../en/talks.html">Talks</a></li>
+        <li><a href="../en/poster_en.html">Posters</a></li>
+        <li><a href="../en/workshop.html">Workshop</a></li>
+        <li><a href="../en/scholarship.html">Scholarship</a></li>-->
     </ul>
 
     <ul id="dropdown4" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/seminario.html">Seminario</a></li>
-        <!--<li><a href="../es/hackaton.html">Hackatón</a></li>-->
+        <li><a href="../en/seminar.html">Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">Hackathon</a></li>-->
     </ul>
 
     <ul id="dropdown5" class="dropdown-content">
         <li><a href=""></a></li>
-        <li><a href="../es/redes.html">Redes</a></li>
-        <li><a href="../es/conducta.html">Conducta</a></li>
-        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
+        <li><a href="../en/network.html">Social</a></li>
+        <li><a href="../en/conduct.html">Conduct</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
-        <div class="nav-wrapper container"><a id="logo-container" href="../es/index.html" class="brand-logo"><em>Bayes</em></a>
-        <ul class="right hide-on-med-and-down">
-            <li><a class="dropdown-button" href="#!" data-target="dropdown2">Somos<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Eventos<i class="material-icons right">arrow_drop_down</i></a></li>
+        <div class="nav-wrapper container"><a id="logo-container" href="../en/index.html" class="brand-logo"><em>Bayes</em></a>
+            <ul class="right hide-on-med-and-down">
+            <li><a class="dropdown-button" href="#!" data-target="dropdown2">We are<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown3">Events<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown4">Virtual<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contacto<i class="material-icons right">arrow_drop_down</i></a></li>
-            <li><a href="musica.html">Música</a></li>
+            <li><a class="dropdown-button" href="#!" data-target="dropdown5">Contact<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a href="../en/music.html">Music</a></li>
             <li><a class="dropdown-button" href="#!" data-target="dropdown0"><i class="fa fa-language"></i></a></li>
         </ul>
     </nav>
 
     <nav class="blue-grey" role="navigation">
         <ul id="nav-mobile" class="sidenav">
-            <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a></li>
-            <li><a href="../es/index.html">Bayes Plurinacional</a></li>
-            <li><a href="">SOMOS:</a></li>
-            <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <li><a href="organiza.html">&#x2022; Organización</a></li>
-            <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
-            <li><a href="../es/musica.html">&#x2022; Música</a></li>
-            <li><a href="">Eventos:</a></li>
-            <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
-            <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
-            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
-            <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
-            <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
-            <li><a href="../es/poster.html">&#x2022; Posters</a></li>
-            <li><a href="../es/taller.html">&#x2022; Taller</a></li>
-            <li><a href="../es/becas.html">&#x2022; Becas</a></li>-->
-            <li><a href="">VIRTUAL:</a></li>
-            <li><a href="../es/seminario.html">&#x2022; Seminario</a></li>
-            <!--<li><a href="../es/hackaton.html">&#x2022; Hackatón</a></li>-->
-            <li><a href="">CONTACTO:</a></li>
-            <li><a href="../es/redes.html">&#x2022; Redes</a></li>
-            <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
+        <li><a class="dropdown-button" href="#!" data-target="dropdown1"><i class="fa fa-language"></i></a>
+        <li><a href="../en/index.html">Plurinational Bayes</a></li>
+        <li><a href="">WE ARE:</a></li>
+        <li><a href="../en/plural.html">&#x2022; Plural</a></li>
+        <li><a href="../en/organice.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/community.html">&#x2022; Community</a></li>
+        <li><a href="../en/music.html">&#x2022; Music</a></li>
+        <li><a href="">Events:</a></li>
+        <li><a href="../en/about.html">&#x2022; About</a></li>
+        <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/history.html">&#x2022; History</a></li>
+        <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
+        <li><a href="../en/talks.html">&#x2022; Talks</a></li>
+        <li><a href="../en/poster.html">&#x2022; Posters</a></li>
+        <li><a href="../en/workshop.html">&#x2022; Workshop</a></li>
+        <li><a href="../en/scholarship.html">&#x2022; Scholarship</a></li>-->
+        <li><a href="">VIRTUAL:</a></li>
+        <li><a href="../en/seminar.html">&#x2022; Seminar</a></li>
+        <!--<li><a href="../en/hackathon.html">&#x2022; Hackathon</a></li>-->
+        <li><a href="">CONTACT:</a></li>
+        <li><a href="../en/network.html">&#x2022; Social</a></li>
+        <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -141,94 +141,80 @@
 
 
 
-
-
-
-
-
-
-
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             </div>
         </div>
 
+
+
         <div class="container">
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Comité organizador
+                Organizing Committee
                 </h4>
 
                 <h6 class="header col s12 light">
-                El siguiente es el equipo organizador actual de las actividades 2024 de Bayes Plurinacional.
+                The following is the current organizing team for the 2024 activities of Bayes Plurinational.
                 </h6>
 
             </div>
 
-
-
-               <div class="column">
-		                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
-		                <h5><p>Gustavo Landfried</p></h5>
-		                <h6><p>Coordinador Bayes Plurinacional</p></h6>
-                </div>
-
-                <div class="column">
-                    <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
-                    <h5><p>Ariel Silvio Norberto Ramos</p></h5>
-                    <h6><p>Anfitrión Universidad Nacional de Salta</p></h6>
-                </div>
-
+            <div class="column">
+                <!--<p><img src="img/gustavo.jpeg" alt="Gustavo" style="width:80%"></p>-->
+                <h5><p>Gustavo Landfried</p></h5>
+                <h6><p>Coordinator Plurinational Bayes</p></h6>
             </div>
 
+            <div class="column">
+                <!--<p><img src="img/gimena.jpg" alt="Gimena" style="width:80%"></p>-->
+                <h5><p>Ariel Silvio Norberto Ramos</p></h5>
+                <h6><p>Host Universidad Nacional de Salta</p></h6>
+            </div>
+        </div>
+
         <div class="container">
+            <ul>
+                <h6><b>Communication</b> team:</h6>
+                <li>&#x2022; Responsible: Ana Veronica Scotta, Camila Nader. </li>
+                <li>&#x2022; Main collaborators: Victor Notar Francesco, Noelia Arguelles, Luiggina Cappellotto, Yasmín Navarrete.</li>
+            </ul>
 
+            <ul>
+                <h6><b>Treasurer and Institutional</b> team:</h6>
+                <li>&#x2022; Responsible: Andrea Goijman, Luciano Moffatt </li>
+                <li>&#x2022; Main collaborators: Ariel Salgado, Gimena Serrano, Rita Salvatierra.</li>
+            </ul>
 
+            <ul>
+                <h6><b>On-site Event</b> team:</h6>
+                <li>&#x2022; Responsible: Ariel Silvio Norberto Ramos, Gustavo Landfried.</li>
+                <li>&#x2022; Main collaborators: Andrea Goijman, Ariel Salgado, Camila Nader, Luciano Moffatt, Ana Verónica Scotta.</li>
+            </ul>
 
-                <ul>
-                <h6>Equipo <b>Comunicación</b>:</h6>
-                    <li>&#x2022; Responsables: Ana Veronica Scotta, Camila Nader. </li>
-                    <li>&#x2022; Principales colaboradores: Victor Notar Francesco, Noelia Arguelles, Luiggina Cappellotto, Yasmín Navarrete.</li>
-                </ul>
+            <ul>
+                <h6><b>Virtual Events</b> team:</h6>
+                <li>&#x2022; Responsible: Ariel Salgado, Luciano Moffatt. </li>
+                <li>&#x2022; Main collaborators: Ana Verónica Scotta, Camila Nader, Noelia Arguelles, Matias Leizerovich.</li>
+            </ul>
 
+            <ul>
+                <h6><b>Technical</b> team:</h6>
+                <li>&#x2022; Responsible: Gustavo Landfried, Macarena Piaggio.</li>
+            </ul>
 
-                <ul>
-                <h6>Equipo <b>Tesorería e institucional</b>:</h6>
-                    <li>&#x2022; Responsables: Andrea Goijman, Luciano Moffatt </li>
-                    <li>&#x2022; Principales colaboradores: Ariel Salgado, Gimena Serrano, Rita Salvatierra.</li>
-                </ul>
+            <ul>
+                <h6>Scientific and Technical <b>Advisory Committee</b>:</h6>
+                <li>&#x2022; Principal Responsible: Sergio Davis (Chile) </li>
+                <li>&#x2022; Substitute Responsible: Gabriel Alzamendi (Argentina)</li>
+                <li>&#x2022; Advisor 3: Albert Ortiz (Colombia)</li>
+                <li>&#x2022; Advisor 4: Lucía Morán Figueredo (Paraguay)</li>
+                <li>&#x2022; Advisor 5: Francisco Linares Cedeño (México)</li>
+            </ul>
 
+            <b>Support for the realization of the 2024 School-Congress:</b>
 
-                <ul>
-                <h6>Equipo <b>Evento presencial</b>:</h6>
-                    <li>&#x2022; Responsables: Ariel Silvio Norberto Ramos, Gustavo Landfried.</li>
-                    <li>&#x2022; Principales colaboradores: Andrea Goijman, Ariel Salgado, Camila Nader, Luciano Moffatt, Ana Verónica Scotta.</li>
-                </ul>
-
-
-                <ul>
-                <h6>Equipo <b>Eventos virtuales</b>:</h6>
-                    <li>&#x2022; Responsables: Ariel Salgado, Luciano Moffatt. </li>
-                    <li>&#x2022; Principales colaboradores: Ana Verónica Scotta, Camila Nader, Noelia Arguelles, Matias Leizerovich.</li>
-                </ul>
-
-
-                <ul>
-                <h6>Equipo <b>Técnica</b>:</h6>
-                    <li>&#x2022; Responsables: Macarena Piaggio, Gustavo Landfried.</li>
-                </ul>
-
-                <ul>
-                <h6>Comité de <b>asesores científicos</b> y técnicos:</h6>
-                    <li>&#x2022; Responsables Principal: Sergio Davis (Chile) </li>
-                    <li>&#x2022; Responsable Suplente: Gabriel Alzamendi (Argentina)</li>
-                    <li>&#x2022; Asesor 3: Albert Ortiz (Colombia)</li>
-                    <li>&#x2022; Asesor 4: Lucía Morán Figueredo (Paraguay)</li>
-                    <li>&#x2022; Asesor 5: Francisco Linares Cedeño (México)</li>
-                </ul>
-
-                <b>Apoyos para la realización de la Escuela-Congreso 2024:</b>
 
                 <br>
                 1. Sergio M. Davis Irrazabal (Física, Comisión Chilena de Energía Atómica, Santiago, Chile)
@@ -357,8 +343,6 @@
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
 
-
-
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
           <div class="nav-wrapper container">
@@ -391,6 +375,7 @@
       </script>
       <!-- END FOOTER -->
 
+
         <!--JavaScript at end of body for optimized loading-->
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="js/materialize.js"></script>
@@ -407,3 +392,4 @@
         </script>
     </body>
   </html>
+ 
