--- a/en/seminar.html
+++ b/en/seminar.html
@@ -43,7 +43,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../en/plural.html">Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">Organizers</a></li>-->
+        <li><a href="../en/organiza_en.html">Organizers</a></li>
         <li><a href="../en/community.html">Community</a></li>
     </ul>
 
@@ -90,7 +90,7 @@
         <li><a href="../en/index.html">Plurinational Bayes</a></li>
         <li><a href="">WE ARE:</a></li>
         <li><a href="../en/plural.html">&#x2022; Plural</a></li>
-        <!--<li><a href="../en/organiza_en.html">&#x2022; Organizers</a></li>-->
+        <li><a href="../en/organice.html">&#x2022; Organizers</a></li>-->
         <li><a href="../en/community.html">&#x2022; Community</a></li>
         <li><a href="../en/music.html">&#x2022; Music</a></li>
         <li><a href="">Events:</a></li>
@@ -146,9 +146,7 @@
               <ul>
                 <li>&#x2022; <b>Gonzalo Ríos.</b> Chief Scientific Officer at NoiseGrasp Spa.</li>
                 <li>&#x2022; <b> When:</b> 4 September 2023</li>
-                <li>&#x2022; <b> Where:</b>Life at youtube</li>
-                <!--<li>&#x2022; <b>Material:</b> Texto de divulgación <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Pdf de la presentación.</a></li>
-                -->
+                <!--<li>&#x2022; <b> Where:</b>Life at youtube</li>-->
                 <li>&#x2022; <b>Abstract:</b> It will be presented a model selection paradigm based on the optimal transport criterion: the barycenter under the Wasserstein distance. The selected model will be characterized and some tools for its calculation will be provided.
                 </li>
                 <li>&#x2022; <b>Bio:</b> Head of the Data Science area for the development of predictive marketing models at NoiseGrasp Spa. Trained at the University of Chile as Doctor in Engineering Sciences, Master in Computer Science, Bachelor in Mathematical Sciences, Civil Engineer in Mathematics. For a decade he was a professor at the University of Chile in the departments of mathematics, computer science and engineering.</li>
@@ -165,8 +163,8 @@
 
               <ul>
                 <li>&#x2022; <b>Francisco Xavier Linares Cedeno.</b> Posdoctoral researcher at Instituto de Física y Matemáticas - Universidad Michoacana de San Nicolás de Hidalgo, México.</li>
-                <li>&#x2022; <b>When:</b> June 1 (Thursday) at 4pm GMT-3 (Argentine time)</li>
-                <li>&#x2022; <b> Where:</b> <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b>When:</b> June 1 (Thursday) 2023 at 4pm GMT-3 (Argentine time)</li>
+                <!--<li>&#x2022; <b> Where:</b> <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Material:</b> Science popularization text <a href="biblio/linares2023-divulgacion.pdf" target="_blank">Cosmología e Inferencia Bayesiana.</a></li>
                 <li>&#x2022; <b>Abstract:</b> This talk explores the process of inferring cosmological parameters using the Bayesian Theorem. Firstly, it introduces the Einstein equations as the basis for constructing the standard cosmological model, known as <em>LambdaCDM</em>. To analyze Supernova observation data, it defines the distance calculation for luminous objects, referred to as the <em>theoretical distance modulus</em>. Secondly, it presents the information obtained from supernovas and the procedure for parameterizing the observable distance modulus based on their intrinsic properties. Thirdly, using the Bayesian Theorem, it establishes a statistical comparison between the predictions of the LambdaCDM model and the distance modulus derived from supernovas. Specifically, it imposes constraints on the total matter parameter of the universe and poses the question: "What is the most probable value for the amount of matter in the universe, given the supernova data?" Finally, it discusses the application of Bayesian statistics in other cosmological contexts.
                 </li>
@@ -187,8 +185,8 @@
               <ul>
                 <li>&#x2022; <b>Kenia Almenares</b>. Escuela Nacional de Salud Pública de Cuba.</li>
                 <li>&#x2022; <b> Language:</b> Spanish talk</li>
-                <li>&#x2022; <b> When:</b> May 11 (Thursday) at 4pm GMT-3 (Argentine time)</li>
-                <li>&#x2022; <b> Where:</b> Live at <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b> When:</b> May 11 (Thursday) 2023 at 4pm GMT-3 (Argentine time)</li>
+                <!--<li>&#x2022; <b> Where:</b> Live at <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Co-authors:</b> Pedro Más Bermejo DrCs., Lizet Sánchez Valdés DrC., María J. Vidal Ledo DrC.</li>
                 <li>&#x2022; <b>Material:</b> Article <a href="biblio/almenares2022-covidAbdala.pdf" target="_blank">Impacto y efectividad de la vacuna Abdala en la provincia Matanzas ante la enfermedad sintomática y la muerte por COVID-19</a></li>
                 <li>&#x2022; <b>Abstract:</b> The Cuban vaccine Abdala was designed by the "Centro de Ingeniería Genética y Biotecnología de Cuba", to control the COVID-19 epidemic. It was implemented in a vaccination campaign in persons ≥ 19 years old, in Havana, during May-July 2021. Objective: To evaluate the impact of vaccination on the incidence, severity and mortality due to COVID-19, in Havana, Cuba, from July to October 2021. Methods: A longitudinal causal impact study was conducted in Havana, Cuba. The entire Havana population (2,137,936 inhabitants) was included and the Bayesian Structural Time Series (BSTS) model was applied to obtain the impact of vaccination with the Abdala vaccine in the short term, with the calculation of the difference (counterfactual) between the observed time series of incidence, severity and mortality, and what would have happened if vaccination had not been administered. The time series of incidence, severity and mortality of Camagüey and Holguín provinces in the same period of time were used as control series (probability intervals of 95.0% were used). Results: In the absence of the intervention, an average weekly incidence value of 151 cases was expected, instead, 22 cases were observed, with a relative reduction of 54.0% (95.0% of the counterfactual interval was -70;-38). Severity did not show significant changes in the short term. Mortality, however, showed an expected value of about 3 deaths per week on average, the observed value was 2, with a reduction from the time of intervention of 36.0%, interval (-56;-14). Conclusions: The impact of vaccination evidenced a reduction in the indicators of incidence, severity and death due to COVID-19 in Havana, Cuba.</li>
@@ -206,8 +204,8 @@
               <ul>
                 <li>&#x2022; <b>Rodrigo Echeveste</b>. CONICET researcher, from sinc(i) institute, Santa Fe, Argentina</li>
                 <li>&#x2022; <b> Language:</b> Spanish talk</li>
-                <li>&#x2022; <b> When:</b> May 4 (Thursday) at 4pm GMT-3 (Argentine time)</li>
-                <li>&#x2022; <b> Where:</b> Live at <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>
+                <li>&#x2022; <b> When:</b> May 4 (Thursday) 2023 at 4pm GMT-3 (Argentine time)</li>
+                <!--<li>&#x2022; <b> Where:</b> Live at <a href="https://www.youtube.com/@bayesdelsur" target="_blank">https://www.youtube.com/@bayesdelsur</a></li>-->
                 <li>&#x2022; <b>Material:</b> Article <a href="https://www.nature.com/articles/s41593-020-0671-1.pdf
                 " target="_blank">Cortical-like dynamics in recurrent circuits optimized for sampling-based probabilistic inference</a></li>
                 <li>&#x2022; <b>Abstract:</b> In recent years, Deep Learning has gained position as a tool for explaining the behavior of natural neural systems. However, these models lack dynamic behavior and often do not properly represent the uncertainty of their predictions. Our cerebral cortex presents rich dynamics, allowing to navigate a world in which the information we receive from our senses is always partial and incomplete. In this talk, I will be discussing how to train recurrent neural networks (RNN) under biological constraints. This allows approximating an ideal bayesian observer. Surprisingly, typical dynamic features of the visual cortex, such as gamma oscillations and transient responses with overshoot, emerge from this purely computational task.These types of models allow us to advance our understanding of the links between physiology and sensory perception.</li>
@@ -215,26 +213,6 @@
 
               </ul>
 
-
-              <!--<h5>Previous activities:</h5>
-              <hr></hr>
-              <h6><a href="https://github.com/Grupo-de-modelado-probabilista/Modelado_Bayesiano" target="_blank">Bayesian Modeling Course</a><a id="Modelado_Bayesiano">.</a> From 28/11/2022 to 02/12/2022</h6>
-              <p>This is an introductory course for people with no prior knowledge of statistics or data science. Familiarity with Python and Python libraries used in data analysis such as Numpy, matplotlib, Pandas, etc. is assumed.
-              </p>
-              <p>
-              Those who don't know Python but are familiar with other programming languages will also be able to take advantage of the course, although you may experience a little more friction.
-              </p>
-              <p>
-              Finally, those who are not interested in learning how to code for data analysis can still take advantage of some of the material to get a bird's-eye view of Bayesian methods.
-              </p>
-              <hr></hr>
-              <h6>Seminar <a href="https://www.conicet.gov.ar/oportunidades-y-becas/publicacion/344/congresosseminarios/" target="_blank">Causal models and equity in machine learning</a><a id="#fairness">.</a> Start on 10/19/2022</h6>
-              <p>The Department of Computing of the Faculty of Engineering (UBA) invites you to participate in this series of seminars.</p>
-              <p>
-              The application of machine learning models for decision-making that affects people can help put an end to discriminatory episodes carried out by certain agents thanks to the automation of decision processes. However, it also raises ethical issues due to the possibility that algorithmic bias ends up reinforcing certain historical inequalities.
-              </p>
-              <p>
-              The study of the implications of the use of machine learning technologies in social contexts has given rise to an area of study known as Fairness, Accountability and Transparency (FAT). Through these seminars we seek to promote a space for discussion and debate on this topic of social relevance, and stimulate possible applications and studies related to it.</p>-->
 
             </div>
         </div>
