--- a/es/taller.html
+++ b/es/taller.html
@@ -56,7 +56,7 @@
     <ul id="dropdown2" class="dropdown-content">
         <li><a href=""></a></li>
         <li><a href="../es/plural.html">Plural</a></li>
-        <!--<li><a href="../es/organiza.html">Organización</a></li>-->
+        <li><a href="../es/organiza.html">Organización</a></li>
         <li><a href="../es/comunidad.html">Comunidad</a></li>
     </ul>
 
@@ -103,7 +103,7 @@
             <li><a href="../es/index.html">Bayes Plurinacional</a></li>
             <li><a href="">SOMOS:</a></li>
             <li><a href="../es/plural.html">&#x2022; Plural</a></li>
-            <!--<li><a href="organiza.html">&#x2022; Organización</a></li>-->
+            <li><a href="organiza.html">&#x2022; Organización</a></li>
             <li><a href="../es/comunidad.html">&#x2022; Comunidad</a></li>
             <li><a href="../es/musica.html">&#x2022; Música</a></li>
             <li><a href="">Eventos:</a></li>
